# clip-jaxtorch

./: .gitignore  README.md  printy.py  pyproject.toml
clip_jax_simple/: #vit.py#  vit.py
clip_jaxtorch/: clip.py  resnet.py  vit.py
data/: rn50x4.txt  vitb32.txt  vitl14.txt
test/: printy.py  test_attn.py  test_vit.py
