[tool.poetry]
name = "clip-jaxtorch"
version = "0.1.0"
description = "A simple jax implementation of CLIP using jaxtorch."
authors = ["nshepperd <nshepperd@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
